commited the jupyter stuff

--- a/notebook/Python-2.ipynb
+++ b/notebook/Python-2.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -271,16 +271,16 @@
     "C=-20; F=9.0/5*C+32; print C,F\n",
     "C=-15; F=9.0/5*C+32; print C,F\n",
     "C=-10; F=9.0/5*C+32; print C,F\n",
-    "C=-5; F=9.0/5*C+32; print C,F\n",
-    "C=0; F=9.0/5*C+32; print C,F\n",
-    "C=5; F=9.0/5*C+32; print C,F\n",
-    "C=10; F=9.0/5*C+32; print C,F\n",
-    "C=15; F=9.0/5*C+32; print C,F\n",
-    "C=20; F=9.0/5*C+32; print C,F\n",
-    "C=25; F=9.0/5*C+32; print C,F\n",
-    "C=30; F=9.0/5*C+32; print C,F\n",
-    "C=35; F=9.0/5*C+32; print C,F\n",
-    "C=40; F=9.0/5*C+32; print C,F"
+    "C=-5;  F=9.0/5*C+32; print C,F\n",
+    "C=0;   F=9.0/5*C+32; print C,F\n",
+    "C=5;   F=9.0/5*C+32; print C,F\n",
+    "C=10;  F=9.0/5*C+32; print C,F\n",
+    "C=15;  F=9.0/5*C+32; print C,F\n",
+    "C=20;  F=9.0/5*C+32; print C,F\n",
+    "C=25;  F=9.0/5*C+32; print C,F\n",
+    "C=30;  F=9.0/5*C+32; print C,F\n",
+    "C=35;  F=9.0/5*C+32; print C,F\n",
+    "C=40;  F=9.0/5*C+32; print C,F"
    ]
   },
   {
@@ -448,12 +448,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 -17.7777777778\n",
+      "10.0 -12.2222222222\n",
+      "20.0 -6.66666666667\n",
+      "30.0 -1.11111111111\n",
+      "40.0 4.44444444444\n",
+      "50.0 10.0\n",
+      "60.0 15.5555555556\n",
+      "70.0 21.1111111111\n",
+      "80.0 26.6666666667\n",
+      "90.0 32.2222222222\n",
+      "100.0 37.7777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "F = 0.0                         # Init Fahrenheit\n",
+    "df = 10.0                       # Increment for C within the loop\n",
+    "while F <= 100:                 # Loop heading with condition\n",
+    "    C = (F - 32.0)*(5.0/9.0)    # 1st statement inside loop\n",
+    "    print F, C                  # 2nd statement inside loop\n",
+    "    F = F + df                  # Increment F for the next iteration of the loop."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -897,12 +922,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "List1 = range(1,n,2)\n",
+    "print List1\n",
+    "\n",
+    "n = 20\n",
+    "List = []\n",
+    "for i in range(0,n):\n",
+    "    if (i%2 != 0):\n",
+    "        List.append(i)\n",
+    "print List"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1214,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1247,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1460,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -2001,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -2023,6 +2067,7 @@
     "\n",
     "# call:\n",
     "position, velocity = yfunc(0.6, 3)\n",
+    "\n",
     "\n",
     "print position, velocity"
    ]
@@ -2067,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -2140,6 +2185,35 @@
    ],
    "source": [
     "somefunc(\"Hello\", [1,2], kwarg1=\"Hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('hi', 9.0)\n",
+      "('hi', 9.0)\n",
+      "{'number': 2, 'species': 'frog'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def golofunc(*args):    #the \"splat\" arguemnt \n",
+    "    print args\n",
+    "\n",
+    "golofunc(\"hi\", 9.0)\n",
+    "\n",
+    "def golofunc_1(**kwargs):    #the \"splat\" arguemnt \n",
+    "    print kwargs\n",
+    "\n",
+    "golofunc_1(number = 2, species = \"frog\")\n"
    ]
   },
   {
@@ -2289,12 +2363,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.4867195147342977e-06, 2.438960745893352e-06, 3.961299091032061e-06, 6.369825178867068e-06, 1.014085206548667e-05, 1.5983741106905332e-05, 2.4942471290053356e-05, 3.8535196742086716e-05, 5.8943067756539116e-05, 8.926165717713165e-05, 0.00013383022576488347, 0.00019865547139276955, 0.00029194692579145534, 0.0004247802705507443, 0.0006119019301137611, 0.0008726826950457439, 0.0012322191684729959, 0.001722568939053646, 0.0023840882014647936, 0.003266819056199852, 0.004431848411937913, 0.005952532419775727, 0.007915451582979792, 0.010420934814422364, 0.013582969233685318, 0.01752830049356815, 0.022394530294842403, 0.028327037741600544, 0.03547459284623067, 0.043983595980426234, 0.05399096651318691, 0.06561581477467521, 0.07895015830089254, 0.09404907737688506, 0.11092083467945342, 0.12951759566588933, 0.14972746563574219, 0.17136859204780444, 0.19418605498320982, 0.21785217703254722, 0.24197072451913992, 0.2660852498987513, 0.2896915527614793, 0.31225393336675794, 0.33322460289179656, 0.3520653267642967, 0.36827014030332095, 0.3813878154605222, 0.39104269397545455, 0.3969525474770111, 0.3989422804014327, 0.3969525474770125, 0.3910426939754573, 0.38138781546052625, 0.36827014030332617, 0.3520653267643029, 0.3332246028918036, 0.3122539333667657, 0.28969155276148756, 0.2660852498987598, 0.2419707245191485, 0.21785217703255577, 0.1941860549832181, 0.17136859204781235, 0.14972746563574962, 0.1295175956658962, 0.11092083467945973, 0.09404907737689075, 0.07895015830089758, 0.06561581477467965, 0.05399096651319074, 0.043983595980429516, 0.03547459284623344, 0.02832703774160286, 0.02239453029484431, 0.017528300493569706, 0.013582969233686572, 0.010420934814423364, 0.00791545158298058, 0.00595253241977634, 0.004431848411938385, 0.003266819056200212, 0.002384088201465065, 0.001722568939053848, 0.0012322191684731446, 0.0008726826950458523, 0.0006119019301138393, 0.00042478027055080017, 0.00029194692579149475, 0.00019865547139279706, 0.00013383022576490247, 8.926165717714466e-05, 5.894306775654792e-05, 3.8535196742092605e-05, 2.4942471290057255e-05, 1.598374110690789e-05, 1.0140852065488327e-05, 6.369825178868132e-06, 3.961299091032737e-06, 2.438960745893777e-06, 1.486719514734562e-06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt, pi, exp\n",
+    "import numpy as np\n",
+    "\n",
+    "def gauss(x, m=0.0, s=1.0):\n",
+    "    tmp1 = 1.0/(sqrt(2*pi)*s)\n",
+    "    tmp2 = -0.5*( ((x - m)/s)*((x - m)/s) )\n",
+    "    tmp2 = exp(tmp2)\n",
+    "    return tmp1*tmp2\n",
+    "\n",
+    "start = -5.0\n",
+    "end   = 5.1\n",
+    "dx    = 0.1\n",
+    "\n",
+    "x = np.arange(start, end, dx)\n",
+    "    \n",
+    "print map(gauss, x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2362,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -2371,7 +2470,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1.0 0\n"
+      "0"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "global name 'sin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-dc0da665cce1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mpi\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-64-dc0da665cce1>\u001b[0m in \u001b[0;36mf\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mpi\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'sin' is not defined"
      ]
     }
    ],
@@ -2409,9 +2520,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def H(x):\n",
+    "    return (0 if x < 0 else 1)\n",
+    "\n",
+    "print H(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -2433,7 +2567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
