--- a/notebook/Python-5.ipynb
+++ b/notebook/Python-5.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -241,12 +241,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The temperature in London is 15.4\n"
+      " The temperature in London is 15.4\n"
      ]
     }
    ],
    "source": [
-    "temps = {\"Oslo\": 13, \"London\": 15.4, \"Paris\": 17.5}\n",
+    "temps = {\"Oslo\":13, \"London\":15.4, \"Paris\":17.5}\n",
     "print \"The temperature in London is\", temps[\"London\"]"
    ]
   },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -389,14 +389,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Keys =  ['Paris', 'Oslo', 'London', 'Madrid']\n",
-      "Values =  [17.5, 13, 15.4, 26.0]\n"
+      "Keys =  ['Paris', 'Oslo', 'London']\n",
+      "Values =  [17.5, 13, 15.4]\n",
+      "Items =  [('Paris', 17.5), ('Oslo', 13), ('London', 15.4)]\n"
      ]
     }
    ],
    "source": [
     "print \"Keys = \", temps.keys()\n",
-    "print \"Values = \", temps.values()"
+    "print \"Values = \", temps.values()\n",
+    "print \"Items = \", temps.items() \n",
+    "temps.clear?"
    ]
   },
   {
