--- a/notebook/Python-6.ipynb
+++ b/notebook/Python-6.ipynb
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class Y:\n",
-    "    def __init__(self, v0):\n",
+    "class Y(object):\n",
+    "    def __init__(self, v0 = 3):\n",
     "        self.v0 = v0\n",
     "        self.g = 9.81\n",
     "    def value(self, t):\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -112,15 +112,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.25095\n"
+      "0.25095 0.25095\n"
      ]
     }
    ],
    "source": [
-    "y = Y(v0=3)      # Create instance\n",
+    "y = Y(v0 = 3)      # Create instance\n",
     "v = y.value(0.1) # Compute function value\n",
+    "newy = Y()\n",
+    "newv = y.value(0.1)\n",
     "\n",
-    "print v"
+    "print v, newv"
    ]
   },
   {
@@ -885,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -895,7 +897,7 @@
     "    def __init__(self, v0):\n",
     "        self.v0 = v0\n",
     "        self.g = 9.81\n",
-    "    def __call__(self, t):\n",
+    "    def __call__(self, t):                         #This call method is the business. \n",
     "        return self.v0*t - 0.5*self.g*t**2"
    ]
   },
@@ -1035,12 +1037,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class HW(object):\n",
+    "    def __str__(self):\n",
+    "        return 'Hello World' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = HW()\n",
+    "print y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1064,6 +1090,61 @@
     "print f(pi)\n",
     "print f"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class NI():\n",
+    "    def __call__(self):\n",
+    "        return 6\n",
+    "    def __mul__(self, other):\n",
+    "        if not isinstance(other, float):\n",
+    "            return NotImplemented\n",
+    "        else:\n",
+    "            self*other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'int' and 'instance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-80175d91e55f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNI\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'int' and 'instance'"
+     ]
+    }
+   ],
+   "source": [
+    "y = NI()\n",
+    "g = NI()\n",
+    "\n",
+    "u = \n",
+    "\n",
+    "print u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1082,7 +1163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
